--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -1704,8 +1704,8 @@ input[type="radio"] {
 
 input[type="radio"] + label {
     color: #666666;
-    /* font-size: 15px; */
-    /* font-weight: 500; */
+    font-size: 15px;
+    font-weight: 500;
     vertical-align: middle;
 }
 
@@ -3331,17 +3331,7 @@ input[type="radio"]:checked + label span {
     padding: 0 30px 0 5px;
     font-size: 14px;
 }
-.input-cand:after{
-	content:'';
-	background-image: url(../img/mypage/icon-can.png);
-	width: 20px;
-	height: 19px;
-	background-size: 100%;
-	position: absolute;
-	right: 7px;
-	top: 50%;
-	transform: translateY(-50%);
-}
+.input-cand:after{content:'';background-image: url(../img/mypage/icon-can.png);width: 20px;height: 19px;background-size: 100%;position: absolute;right: 7px;top: 50%;transform: translateY(-50%);}
 
 .is-span{
     display: inline-block;
@@ -3913,13 +3903,15 @@ input[type="radio"]:checked + label span {
 
 
 .coll-text{
-    border: #e8e8e8 1px solid;
+    
+        border: #e8e8e8 1px solid;
     padding: 33px 45px 33px 45px;
     font-size: 12px;
     color: #999999;
     font-weight: 600;
     line-height: 1.83;
-}
+    
+    }
 .modal-demo-1{
     display: table;
     width: 100%;
@@ -4030,7 +4022,7 @@ a.btn:hover{
 }
 main{
   background: #fff;
-  padding:: 20px;
+  padding: 20px;
   
 }
 
@@ -4191,6 +4183,668 @@ code{
     padding: 5px 44px 4px 22px;
     border-radius: 40px;
 }
+
+
+
+
+
+/* mgz start */
+.mgz-wrap{}
+.mgz-top{width: 100%;height: 448px;}
+.mgz-top2{width: 100%;height: 304px;}
+.mgz-bg-1{
+    background-image: url('../img/mgz/title-bg1.png');
+    background-position: center;
+}
+.mgz-bg-2{
+    background-image: url('../img/mgz/title-bg2.png');
+    background-position: center;
+}
+.mgz-bg-3{
+    background-image: url('../img/mgz/title-bg3.png');
+    background-position: center;
+}
+.mgz-bg-sub{
+    background-image: url('../img/mgz/sub-bg1.png');
+}
+.mgz-title{
+    max-width: 1500px;
+    margin: 0 auto;
+    padding-left: 47px;
+    padding-top: 60px;
+}
+.mgz-title img{
+    display: block;
+    vertical-align: top;
+}
+.mgz-title .mgz-text{
+    position: relative;
+    padding-left: 0;
+    padding-right: 30px;
+    font-size: 26px;
+    color: #ffffff;
+    font-weight: 600;
+    margin-top: -12px;
+    position: relative;
+    display: inline-block;
+    margin-left: 30px;
+}
+.mgz-title .mt-bgs:after{content:'';position: absolute;left: 0;top: 0;background-color: rgb(0 0 0 / 28%);width: 100%;height: 100%;z-index: 0;}
+
+.mgz-text.mt-bgs {
+    
+}
+.mgz-text.mt-bgs span{
+    z-index: 2;
+    position: relative;
+}
+
+.mgz-body{
+    background-color: #fff;
+    margin-top: -144px;
+    padding-bottom: 300px;
+}
+.mgz-body2{
+    /* background-color: #000; */
+    padding-bottom: 300px;
+}
+.mgz-link{
+    text-align: center;
+}
+.mgz-ul{
+    display: inline-block;
+    margin: 40px 0 0px 0;
+    border-bottom: #d9d9d9 1px solid;
+}
+.mgz-ul li{
+    display: inline-block;
+}
+.mgz-ul li a{
+    font-size: 18px;
+    font-weight: 600;
+    color: #333333;
+    width: 116px;
+    display: inline-block;
+    padding: 10px 0;
+    position: relative;
+}
+.mgz-ul li a:after{content:'';}
+.mgz-ul li.active a{
+    color: #e9625c;
+}
+.mgz-ul li.active a:after{content:'';position: absolute;bottom: 0;left: 0;background-color: #e9625c;width: 100%;height: 4px;}
+
+.mgz-list{
+    margin: 100px auto 50px auto;
+    width: 100%;
+    max-width: 1317px;
+}
+.mgz-list li{
+    width: 393px;
+    float: left;
+    margin-right: 69px;
+}
+.mgz-list li:nth-child(2n){}
+.mgz-list li:nth-child(3n){
+    margin-right: 0;
+}
+.mgz-list li a{
+    display: block;
+}
+.mgz-list li a .ml-img{
+    position: relative;
+}
+.mgz-list li a .ml-img img{}
+
+.mgz-list li a .ml-div{height:176px;}
+.mgz-list li a .ml-h3{
+    font-size: 16px;
+    color: #333333;
+    font-weight: 600;
+    padding-top: 18px;
+    text-overflow: ellipsis;
+    white-space: normal;
+    line-height: 1.5;
+    height: auto;
+    max-height: 4.3em;
+    text-align: left;
+    overflow-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.mgz-list li a .ml-p{
+    padding-top: 12px;
+    font-size:12px;
+    color: #999999;
+    font-weight: 500;
+    text-overflow: ellipsis;
+    white-space: normal;
+    line-height: 1.5;
+    height: auto;
+    max-height: 4.3em;
+    text-align: left;
+    overflow-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.mgz-list li a .ml-time{
+    font-size: 13px;
+    color: #8f9497;
+    padding-left: 20px;
+    position: relative;
+    margin-top: 8px;
+    display: block;
+}
+.mgz-list li a .ml-time:after{content:'';position: absolute;left: 0;top: 50%;background-image: url('../img/mgz/icon-time.png');background-size: 15px;width: 15px;height: 15px;transform: translateY(-50%);}
+
+.mgz-list:after{content:'';clear: both;position: relative;display: block;}
+.mgz-list:before{content:'';}
+
+.mg_t0{margin-top:0;}
+
+.mgz-youtube{}
+.mgz-youtube .ml-img:after{content:'';background-image: url('../img/mgz/icon-youtube.png');width: 74px;height: 54px;position: absolute;left: 50%;top: 50%;transform: translate(-50%, -50%);}
+.mgz-youtube .ml-img:before{content:'';position: absolute;left: 0;top: 0;width: 100%;height: 100%;background-color: rgb(0 0 0 / 66%);}
+
+.modal-youtube{
+    width: 1060px;
+    height: 601px;
+}
+.modal-youtube .modal-header{
+    padding: 0;
+    min-height: 0;
+    border-bottom: 0;
+}
+.modal-youtube .modal-content{
+    box-shadow: none;
+    border-radius: 0;
+    background-color: rgb(0 0 0 / 0%);
+    border: none;
+}
+.modal-youtube .modal-header .conts{
+    right: -55px;
+    top: 12px;
+}
+.modal-youtube .modal-header .conts img{}
+.modal-youtube .modal-body{
+    padding: 0;
+}
+.modal-youtube iframe{
+    width: 1060px;
+    height: 595px;
+}
+
+.mgz-imgbox{}
+.mgz-img{
+    margin-bottom: 80px;
+}
+.mgz-img .mgi-img{
+    width: 100%;
+}
+.mgz-img .mgi-div{
+    position: relative;
+    margin-top: 6px;
+}
+.mgz-img .mgi-div .md-d{
+    font-size: 14px;
+    color: #999999;
+    font-weight: 600;
+    position: relative;
+    overflow: hidden;
+}
+.mgz-img .mgi-div .md-d span{
+    background: #fff;
+    padding-right: 15px;
+}
+.mgz-img .mgi-div .md-d:after{content:'';position: absolute;top: 50%;width: 100%;height: 1px;background-color: #e4e3e5;transform: translateY(-50%);}
+.mgz-img .mgi-div > span{
+    font-size: 14px;
+    color: #999999;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    background-color: #fff;
+    padding-left: 33px;
+    font-weight: 600;
+}
+
+.mgz-h3{
+    font-size: 56px;
+    font-weight: 600;
+    text-align: center;
+    color: #333334;
+    padding: 160px 0 80px 0;
+}
+.mgx-sub-x{
+    background-color: #f9f9f9;
+}
+.mgx-foot{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    position: relative;
+}
+.mgx-foot .mf-h3{padding-top: 60px;padding-bottom: 45px;}
+
+
+.max-1200 {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0px auto;
+}
+.mgz-p{
+    font-size: 20px;
+    color: #989898;
+    line-height: 1.83;
+    margin-bottom: 20px;
+}
+
+.mgz-div{
+    display: table;
+}
+.mgz-left{
+    display: table-cell;
+    vertical-align: top;
+    padding-right: 17px;
+}
+.mz-h3{
+    font-size: 36px;
+    color: #e9625c;
+    font-weight: 300;
+    margin-bottom: 20px;
+    padding-top: 115px;
+    letter-spacing: 6px;
+}
+.mz-h4{}
+.mg-h4{
+    padding-top: 80px;
+    padding-bottom: 10px;
+    font-size: 24px;
+    color: #333333;
+    font-weight: 600;
+}
+.mg-p{
+    font-size: 14px;
+    color: #222222;
+    line-height: 2.13;
+    padding-bottom: 70px;
+}
+.mgz-right{
+    display: table-cell;
+    vertical-align: top;
+    padding-left: 17px;
+}
+
+
+
+
+
+
+
+.mlz-img{
+    position: relative;
+    max-width: 380px;
+    height: 232px;
+}
+.mlz-img img{
+    width: 100%;
+    height: 100%;
+}
+
+.mlz-div{height:176px;}
+.mlz-h3{
+    font-size: 16px;
+    color: #333333;
+    font-weight: 600;
+    padding-top: 18px;
+    text-overflow: ellipsis;
+    white-space: normal;
+    line-height: 1.5;
+    height: auto;
+    max-height: 4.3em;
+    text-align: left;
+    overflow-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.mlz-p{
+    padding-top: 12px;
+    color: #999999;
+    font-weight: 500;
+    text-overflow: ellipsis;
+    white-space: normal;
+    line-height: 1.5;
+    height: auto;
+    max-height: 4.3em;
+    text-align: left;
+    overflow-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.mlz-time{
+    font-size: 13px;
+    color: #8f9497;
+    padding-left: 20px;
+    position: relative;
+    margin-top: 8px;
+    display: block;
+}
+.mlz-time:after{content:'';position: absolute;left: 0;top: 50%;background-image: url('../img/mgz/icon-time.png');background-size: 15px;width: 15px;height: 15px;transform: translateY(-50%);}
+
+.arr-wrap{
+    position: absolute;
+    width: 103px;
+    height: 45px;
+    top: -21px;
+    right: 0;
+}
+.mgz-arrr{
+    right: 6px;
+}
+.mgz-arrl{
+    left: 20px;
+}
+.mgz-btn{
+    text-align: center;
+    padding-bottom: 200px;
+    margin-top: 50px;
+}
+.mgz-btn a{}
+.mgz-btn a img{}
+/* mgz end */
+
+
+
+
+
+
+
+
+
+/* about start */
+.top-san1{
+    background-image: url('../img/about/bg-1.jpg');
+}
+.top-san2{
+    background-color: rgb(0 0 0 / 7%);
+    z-index: 0;
+    height: 224px;
+}
+.about-div{
+    display: table;
+    padding-bottom: 133px;
+}
+.about-st1{
+    display: table-cell;
+}
+.about-st1 h3{
+    font-size: 56px;
+    font-weight: 600;
+    color: #222222;
+    padding-top: 170px;
+}
+.about-st1 h4{
+    font-size: 34px;
+    color: #222222;
+    padding-top: 10px;
+}
+.about-st1 p{
+    font-size: 20px;
+    color: #222222;
+    padding-top: 50px;
+}
+.about-st2{
+    display: table-cell;
+    padding-top: 105px;
+    vertical-align: top;
+    padding-left: 90px;
+}
+.about-st2 > div{}
+.about-st2 > div img{
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(255,255,255),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
+
+.wei-ul{
+    display: flex;
+}
+.wei-ul li.wei-li{
+    flex: 1;
+    margin-right: 35px;
+}
+.wei-ul li.wei-li:last-child{margin-right:0;}
+.wei-ul li.wei-li > div{}
+.wei-ul li.wei-li > div h3{
+    position: relative;
+    font-size: 33px;
+    font-weight: 600;
+    padding-left: 30px;
+    margin-top: 53px;
+    margin-bottom: 19px;
+}
+.wei-ul li.wei-li > div h3:after{content:'';position: absolute;width: 5px;height: 30px;background-color: #e9625c;left: 0;top: 50%;transform: translateY(-50%);}
+.wei-ul li.wei-li > div p{
+    font-size: 17px;
+    color: #555555;
+}
+
+.wei-ul2{
+    padding: 110px 0 220px 0;
+}
+.wei-ul2 .wei-list{
+    display: table;
+}
+.wei-ul2 li{
+    margin-bottom: 45px;
+}
+.wei-ul2 .wei-list .wei-img{
+    display: table-cell;
+    vertical-align: top;
+}
+.wei-ul2 .wei-list .wl-div{
+    display: table-cell;
+    vertical-align: top;
+    padding-left: 57px;
+}
+.wei-ul2 .wei-list .wl-div h3{
+    font-size: 30px;
+    font-weight: 600;
+    padding-bottom: 18px;
+    padding-top: 20px;
+}
+.wei-ul2 .wei-list .wl-div h3:after{content:'';}
+.wei-ul2 .wei-list .wl-div p{
+    font-size: 16px;
+    color: #555555;
+    line-height: 1.63;
+}
+.mgz-ul2{
+    display: inline-block;
+    margin: 100px 0 0px 0;
+    border-bottom: #d9d9d9 1px solid;
+}
+.mgz-ul2 li{
+    display: inline-block;
+}
+.mgz-ul2 li a{
+    font-size: 18px;
+    font-weight: 600;
+    color: #333333;
+    width: 116px;
+    display: inline-block;
+    padding: 10px 0 25px 0;
+    position: relative;
+}
+.mgz-ul2 li a:after{content:'';}
+.mgz-ul2 li.active a{
+    color: #e9625c;
+}
+.mgz-ul2 li.active a:after{content:'';position: absolute;bottom: 0;left: 0;background-color: #e9625c;width: 100%;height: 4px;}
+.ts-mo{display:none;}
+/* about end */
+
+
+
+.noti-ul{}
+.noti-ul li{border-top: #dcdcdc 1px solid;}
+.noti-ul li:last-child{border-bottom: #dcdcdc 1px solid;}
+.noti-ul li a{display: block;padding: 17px 0 17px 17px;}
+.noti-ul li a p{font-size: 14px;color: #333333;font-weight: 600;text-overflow: ellipsis;
+    white-space: normal;
+    line-height: 1.5;
+    
+    text-align: left;
+    overflow-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;width: 80%;}
+.noti-ul li a span{padding-top: 7px;display: block;color: #999999;font-size: 14px;}
+.selec-inline{display: inline-block;vertical-align: middle;}
+.selec-inline .selec-box{margin-right: 8px;}
+.selec-inline .selec-box .bootstrap-select > .btn{padding: 6px 58px 7px 12px;vertical-align: middle;height: 32px;width: 132px;margin-bottom: 10px;background: #fff;border: #ccc 1px solid;}
+.d_i_b{display: inline-block;}
+
+.panel-group3{
+    border: none;
+    /* margin-bottom: 0; */
+}
+.panel-default3{
+    margin-bottom: 0;
+}
+.panel-group3 .panel{
+    border-radius: 0;
+    border: none;
+    margin-top: 0 !important;
+    box-shadow: none;
+}
+.panel-default3>.panel-heading3{
+    /* background: #f9f9f9; */
+    border-top: #dcdcdc 1px solid;
+    border-bottom: #e8e8e8 1px solid;padding: 23px 70px;
+position: relative;}
+.panel-default3>.panel-heading3:after{content:'';position: absolute;left: 25px;top: 50%;background-image: url(../img/about/icon-q.png);width: 27px;height: 27px;background-size: auto;transform: translateY(-50%);}
+.panel-title3{
+    font-size: 15px;
+    font-weight: 600;
+color: #333333;}
+.panel-title3 a{
+    width: 100%;
+    display: block;
+    position: relative;
+}
+.panel-title3 a.collapsed .collapsdiv:after{content:'';width: 16px;height: 11px;position: absolute;right: 15px;top: 50%;margin-top: -5px;background-image: url(../img/mypage/ar-down.png);background-size: 16px 11px;}
+
+.panel-title3 a  .collapsdiv:before{content:'';width:16px;height:11px;position: absolute;right: 15px;top: 50%;margin-top: -5px;background-image: url(../img/mypage/ar-up.png);background-size: 16px 11px;}
+
+.panel-collapse3{
+    border: none;
+    position: relative;
+    padding-bottom: 0;
+}
+.panel-collapse3 .panel-body{padding: 0;}
+.panel-collapse3 .panel-body .coll-text{border: none;border-bottom: #e8e8e8 1px solid;padding: 40px 70px;
+    font-size: 14px;
+    color: #999999;
+    font-weight: 600;
+    line-height: 1.83;
+position: relative;background-color: #fbfbfb;}
+.panel-collapse3 .panel-body .coll-text:after{content:'';position: absolute;left: 25px;top: 38px;background-image: url(../img/about/icon-a.png);width: 27px;height: 27px;background-size: auto;/* transform: translateY(-50%); */}
+.panel-collapse3 in{}
+.panel-collapse3:after{content:'';}
+.panel-collapse3:before in{content:'';}
+.panel-default3>.panel-heading2+.panel-collapse2>.panel-body{
+    border: none;
+    padding: 0;
+}
+
+.panel-title3 .collapsdiv{background: none;padding: 0;}
+.panel-title3 a .collapsdiv:before{background-image: url(../img/about/arr-b.png);width: 23px;height: 12px;background-size: auto;}
+
+
+.panel-title3 a.collapsed .collapsdiv:after{background-image: url(../img/about/arr-t.png);width: 23px;height: 12px;background-size: auto;background-color: #fff;}
+.cli-div{margin-top: 10px;}
+.cli-banner{background-image: url(../img/about/bg-pc.jpg);width: 100%;height: 157px;margin-bottom: 40px;padding-left: 41px;}
+.cli-banner h3{padding-top: 28px;color: #040404;font-size: 13px;padding-bottom: 4px;}
+.cli-banner h4{font-size: 28px;font-weight: 600;color: #000000;padding-bottom: 9px;}
+.cli-banner p{color: #999999;font-size: 13px;}
+
+.author-ul{}
+.author-ul:after{content:'';display: block;clear: both;}
+.author-ul li{float: left;margin-right: 20px;padding-bottom: 35px;}
+.author-ul li:nth-child(2n){}
+.author-ul li:nth-child(3n){}
+.author-ul li:nth-child(4n){margin-right: 0;}
+
+
+.h4-span{color: #e9625c;font-size: 14px;padding-left: 8px;}
+.mgz-ul3{
+    display: inline-block;
+    margin: 0;
+    border-bottom: #d9d9d9 1px solid;
+}
+.mgz-ul3 li{
+    display: inline-block;
+}
+.mgz-ul3 li a{
+    font-size: 18px;
+    font-weight: 600;
+    color: #333333;
+    width: 85px;
+    display: inline-block;
+    padding: 10px 0 10px 0;
+    position: relative;
+}
+.mgz-ul3 li a:after{content:'';}
+.mgz-ul3 li.active a{
+    color: #e9625c;
+}
+.mgz-ul3 li.active a:after{content:'';position: absolute;bottom: 0;left: 0;background-color: #e9625c;width: 100%;height: 4px;}
+.aut-top{text-align: center;}
+.aut-h4{padding: 78px;padding-bottom: 58px;font-size: 30px;font-weight: 300;}
+
+.aut-reds{border-bottom: #dcdcdc 1px solid;padding-bottom: 10px;margin-bottom: 20px;}
+.mobile-on{display:none;}
+
+.resu-t60{padding-top:60px;}
+
+
+
+.ult-ul{}
+.ult-ul li{padding: 20px 0;border-bottom: #dcdcdc 1px solid;}
+.ult-ul li:first-child{padding-top:0;}
+.ult-ul li:last-child{}
+.uho{background-image: url(../img/about/hr-off.png);width: 35px;height: 35px;background-size: 35px;position: absolute;right: 9px;top: 9px;}
+.uli-hart-on{}
+.uli-hart-on .uho{background-image: url(../img/about/hr-on.png);}
+
+
+.uli-list{display: table;width: 100%;}
+.uli-list .uli-img{display: table-cell;width: 182px;position: relative;}
+.uli-list .uli-img img{}
+.uli-list .uli-text{display: table-cell;width: 620px;vertical-align: top;padding-left: 26px;}
+.uli-list .uli-text .ut-h3{font-size: 16px;font-weight: 600;padding-top: 5px;}
+.uli-list .uli-text .ut-div{font-size: 14px;color: #999999;padding-top: 5px;font-weight: 500;}
+.uli-list .uli-text .ut-p{font-size: 14px;color: #999999;padding-top: 20px;font-weight: 500;}
+
+.uli-list .uli-ste{display: table-cell;width: 293px;vertical-align: top;}
+.uli-list .uli-ste .ste-div{display: block;margin-bottom: 9px;}
+.uli-list .uli-ste .ste-div .ste-img{display: inline-block;vertical-align: middle;}
+.uli-list .uli-ste .ste-div .ste-p1{display: inline-block;font-size: 14px;color: #999999;font-weight: 600;width: 88px;padding-left: 9px;vertical-align: middle;}
+.uli-list .uli-ste .ste-div .ste-p2{display: inline-block;font-size: 14px;color: #222222;font-weight: 600;vertical-align: middle;}
+
+
+
 
 
 
