--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -30,7 +30,7 @@
 						</div>
 						<div class="swiper-pagination swpa-2 pc-no"></div>
 					</div>
-					<div class="swiper-button-next ait-r ta-no swr-1"><span><img src="resources/img/icon/ait-r.png"></span></div>
+					<div class="swiper-button-next ait-r ta-no swl-1"><span><img src="resources/img/icon/ait-r.png"></span></div>
 					<div class="swiper-button-prev ait-l ta-no swr-1"><span><img src="resources/img/icon/ait-l.png"></span></div>
 				</div>
 				<!-- <div class="text-center">
@@ -51,7 +51,7 @@
 						</div>
 						<div class="swiper-pagination swpa-2 pc-no"></div>
 					</div>
-					<div class="swiper-button-next ait-r ta-no swr-2"><span><img src="resources/img/icon/ait-r.png"></span></div>
+					<div class="swiper-button-next ait-r ta-no swl-2"><span><img src="resources/img/icon/ait-r.png"></span></div>
 					<div class="swiper-button-prev ait-l ta-no swr-2"><span><img src="resources/img/icon/ait-l.png"></span></div>
 				</div>
 				<!-- <div class="text-center">
@@ -72,7 +72,7 @@
 						</div>
 						<div class="swiper-pagination swpa-2 pc-no"></div>
 					</div>
-					<div class="swiper-button-next ait-r ta-no swr-3"><span><img src="resources/img/icon/ait-r.png"></span></div>
+					<div class="swiper-button-next ait-r ta-no swl-3"><span><img src="resources/img/icon/ait-r.png"></span></div>
 					<div class="swiper-button-prev ait-l ta-no swr-3"><span><img src="resources/img/icon/ait-l.png"></span></div>
 				</div>
 				<!-- <div class="text-center">
